Caja Negra Sergio gameInit actualizado